@@ -2649,6 +2649,9 @@ MagickExport MagickBooleanType QueryMagickColorCompliance(const char *name,
       char
         colorspace[MaxTextExtent];
 
+      MagickBooleanType
+        icc_color;
+
       /*
         Parse color of the form rgb(100,255,0).
       */
@@ -2658,6 +2661,7 @@ MagickExport MagickBooleanType QueryMagickColorCompliance(const char *name,
           break;
       colorspace[i--]='\0';
       scale=(MagickRealType) ScaleCharToQuantum(1);
+      icc_color=MagickFalse;
       if (LocaleCompare(colorspace,"icc-color") == 0)
         {
           register ssize_t
@@ -2670,6 +2674,7 @@ MagickExport MagickBooleanType QueryMagickColorCompliance(const char *name,
           colorspace[j--]='\0';
           i+=j+3;
           scale=(MagickRealType) QuantumRange;
+          icc_color=MagickTrue;
         }
       LocaleLower(colorspace);
       color->matte=MagickFalse;
@@ -2686,7 +2691,7 @@ MagickExport MagickBooleanType QueryMagickColorCompliance(const char *name,
           return(MagickFalse);
         }
       color->colorspace=(ColorspaceType) type;
-      if (color->colorspace == RGBColorspace)
+      if ((icc_color == MagickFalse) && (color->colorspace == RGBColorspace))
         color->colorspace=sRGBColorspace;  /* as required by SVG standard */
       SetGeometryInfo(&geometry_info);
       flags=ParseGeometry(name+i+1,&geometry_info);
